Fix input on dark mode

--- a/components/form/form.module.css
+++ b/components/form/form.module.css
@@ -34,6 +34,11 @@
   font-family: inherit;
   width: 100%;
   padding: 0;
+  color: var(--black);
+
+  &::placeholder {
+    color: var(--grey);
+  }
 
   @media (--mobile) {
     font-size: var(--type-scale-3);
