--- a/pages/case-studies/caseStudy.module.css
+++ b/pages/case-studies/caseStudy.module.css
@@ -1,18 +1,3 @@
-.form {
-  &.loading {
-    opacity: 0.5;
-    pointer-events: none;
-    user-select: none;
-  }
-}
-
-.input {
-  font-size: var(--type-scale-6);
-  padding: 0;
-  border: none;
-  font-family: inherit;
-}
-
 .content {
   grid-column: 2 / 8;
 
